--- a/.gitignore
+++ b/.gitignore
@@ -103,7 +103,7 @@ dist
 # TernJS port file
 .tern-port
 
-package-lock# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
 /node_modules
@@ -126,3 +126,5 @@ package-lock# See https://help.github.com/articles/ignoring-files/ for more abou
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+package-lock.json
